tests/transpiler/x/pl/append_builtin.pl
% Generated by Mochi transpiler 2025-07-19 12:36:21 UTC
:- style_check(-singleton).
:- initialization(main).

main :-
    A is [1, 2],
    append(A, [3], R1), write(R1), nl.
